# predictive-maintenance-mlops

./: .dockerignor  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  docker-compose.yml  dockerfile  prometheus.yml  pyproject.toml
.dvc/: config
.github/workflows/: blank.yml  ci-cd.yml
cookiecutter-template/: cookiecutter.json
cookiecutter-template/{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cookiecutter-template/{{cookiecutter.project_slug}}/.github/workflows/: ci-cd.yml
cookiecutter-template/{{cookiecutter.project_slug}}/configs/: model.yaml
cookiecutter-template/{{cookiecutter.project_slug}}/k8s/: deployment.yaml  service.yaml
cookiecutter-template/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: pipeline.py
cookiecutter-template/{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/api/: main.py
cookiecutter-template/{{cookiecutter.project_slug}}/tests/: test_api.py
data/: raw.dvc
k8s/: deployment.yaml  service.yaml
models/: features.json  random_forest_model.pkl  scaler.pkl
notebooks/: minio.ipynb  predictive-maintenance-mlops.ipynb
notebooks/.ipynb_checkpoints/: predictive-maintenance-mlops-checkpoint.ipynb
reports/metrics/: metrics.json
src/: pipeline.py
src/api/: main.py
src/data/: analysis.py  data_loader.py  load_generator.py
src/evaluation/: evaluate.py
src/features/: feature_engineering.py
src/models/: save_model.py  train_model.py
tests/: conftest.py  test_api.py
