[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "predictive-maintenance-mlops"
version = "0.1.0"
description = "Прогнозирование остаточного ресурса авиационных двигателей на основе данных NASA CMAPSS"
requires-python = ">=3.12"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.2.0",
    "joblib>=1.2.0",
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "scalar-fastapi>=1.8.2",
    "dvc[s3]>=3.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0"
]
